@@ -1,8 +1,7 @@
-AUX config.ini 1916 SHA256 53412b0a0415ffbbde67b190e157b4a3269e437e1eddb5e9bd7c1b8df8dd8207 SHA512 07b2238ce61cb0e647635c4b973d273ee7336d2b953c37a94193fc94b787f3e18ff72f19f0a11928c379da22912aa74d6af7d8d930bbf09a5d50ae4a9ea167f6 WHIRLPOOL 54c1aa3013e87cd5a1c9aec09dd25d9d2c84262b97dcc5f97967c81ede113a6ef85443ddab135f414c844562a6a62f41f733f0d2816a93879fb02d474dfcc93d
-AUX moviegrabber.conf 492 SHA256 9e1f6c41a87073457e52733ce9faac073ca8b05cbbf181f98da5b347e716fa1a SHA512 3ed604f61821d8c12b5283be2c18ca2220381adbbe5b2c596afbdd19519f665922fd2726f40b719eca7e99d2c78db794c56aa9981f4ef42213c59a737c5ca89b WHIRLPOOL 89ab492b894ae327c8215ea68e9e3f388b9bd4d0170a054a0fc0ad5dd556132bf2f9df9706629dda6695d624ecb2d1485d9a122904824d41cfef5f75c160a0ab
-AUX moviegrabber.init 1193 SHA256 bd2d38a235f1f4ca612b16dc209a7d2b9a086e749044541d9fcd0599b42171fb SHA512 f83baaa6c818e35d1a815b01cdbdd149be52c749720aa0b68bf9859457b65b423018a7d9fe3b22ccc2c37f293ee4e55d06a1ebdf634733ea493cadb504fca28c WHIRLPOOL 2a7bd30ddbf009b157364f0115762c651b8e6942f8ae6f75cf779c245254c848040d5c97aacc9e76dc06689dad211a398bd318f9fa4e1b91f21542307deb133c
+AUX config.ini 2001 SHA256 baa066ecdcb82e8a8b1865c8dde3da3521ff562c9b7852a3edd61b37543fef42 SHA512 de4b587b9aa9e35a7b3403f08a7f20afd5089bfd002f5f1baa4ad1df140df6b87a650034d65f847f747bbbea18edc8b6303edb493504728750b917b315757303 WHIRLPOOL 54f4ee5302846a383649f07e75df6a5e80d6b4864938ef156163b0b93135f1882317385560c2f220933e4ee5b457cc23928d76833cc857737678f7fb0585e08f
+AUX moviegrabber.conf 689 SHA256 bbfa35898c30023dcbbe12fe8c6c68a04a531a9b7356ddadbeb6476109834eba SHA512 f2da314611153fef1fe8cc1b3cdbd811b302c30d6ed9bffd11f41618e5cfdbcf281d80d91a924b30b692f123270ffd57a25de27ee98ad0eea3cbccbbf6dbe724 WHIRLPOOL 85929e513076dff9af906b7a0cb660fb553c194f4b10e6f6a930ce6f6c74f9fff64e980ed0369e916d713bea8ee2cba4434e897ad9defadd8cc6107087f8c61c
+AUX moviegrabber.init 1234 SHA256 d842e1ad47379c32303d3f989af8004f77b8a798a758ab8d89bc198655ee7501 SHA512 fa89922b448b2559ab48fc3ebd513b57fe63e90b3bee85f6df0adaa57b15e4dd490b781f6efd4ed61395cadbf0c04f282e7258380b67fb41fb5cf95a9a16a6e4 WHIRLPOOL da70bb2933facbac66c780922547a57a36b8b4d8b88df510458f8e40609d1c37b6ca7e9ddf6dd848873339c25e1b9e164a1d084b2db29b237dfd34fc1997010a
 AUX moviegrabber.logrotate 193 SHA256 c49bdfff1d6a8a44f97fd3a99a187b5d2f234018c8c5481377bc8c965ef8ec77 SHA512 20f2d84d9d392d2b3a8a643b3607402e943ae9debead3363e092c78f740c48d0c5165ab6aa967ea33cf4fbc28613710a2de3ada4231eccf70640dc5047e2b725 WHIRLPOOL 049070f52cfff6e9e4547600b46873eeb1a7ecb4d71206489cd6ed68b94d0650ad92063cc41efd20b4054b04fb411d4a254ead35ac44dbaff7ccee55a5222c6b
-DIST moviegrabber-src-2.1.9.zip 3715491 SHA256 5c363da834b1b793a379b5f6ba14357a9c75152fd69cf47e3d5de57a8dee56f5 SHA512 9a191cb4274676b8872ffb50a7ff33dbaad85e5d8c2750fab0318bbb57ba03fbdc7e822b1554bc34a4e2de2061d63bdb1354c10a6132ba5279e157b518e4592d WHIRLPOOL 4eeaa1864351b633a8d61c51e0f85c208681d4ac986981537f114d8293a941df2019a4e359810e64368a2f4df8cc3138909e00f2043f756a156cd035d9deac3e
-EBUILD moviegrabber-2.1.9.ebuild 2254 SHA256 766dac0e0b335c02c20acd33bcc9d839f912e00faa008678cdf2685f6505fd86 SHA512 4ad8224e91a5adf768484fc3307a0aff57c54426efd9c53cdd7bcd798db94f29bcf711b0998250a28cda5098b47e5a730bcbb3af1481139a14129898ccabc9b0 WHIRLPOOL 738995205fd27e903dd6b73fe7ce948da515b033d851ea674313fd020687db16e653a48afdc06f3c2e0d3dc8e7830049297645d070a358503cd47f2d9cd0700a
-MISC ChangeLog 435 SHA256 21dd3603584c15e5dc6a2459668e71f5288dada8fcc280175326bf9773c6f5b8 SHA512 b72c3d9524258fd66508f4b545191fb69a07c0861fcca9a70c1ba07781438c752647cd0d5e069e45398956066656340a4a7048c9b7745423d6e821f778aaeafd WHIRLPOOL 906e75dfd174efa8fac388141a1562faf29e55687a40b39cbeef2c578ffc6034e18b72f9ab81dc3d9715d219c75b4384c5b4f40eb2b5d17a4ce50e9bc460d1a6
+EBUILD moviegrabber-9999.ebuild 2259 SHA256 a88227a77b4a0c8771a1df98da6de94c21a2cfbd12a567b4707c01287b9858af SHA512 ca1e9069e55dad40cb55241f68aea5aea7a712a2c032e8b4ffd8bc39465e721fbff1b02357e91811f5255cddd33024bf70abee57e0d2d3cce7ec322333db195b WHIRLPOOL debc880a83ecf37cdfaff6bb16a72bca8a343aa5a9728b46fc7e8bb7b2d21c695a729e1349e0ea3706d38ae8755d58e3e7be3ba572811c881eb19e163dc8f788
+MISC ChangeLog 942 SHA256 72d682dbf656aea1836f444f524915a839437cad8878c3a6b940ed104e510379 SHA512 c7c54edfa0f4d431a505e58d8c16cccea8dac2217d9ac4d3a4351499858d1428ddf5b8d56cb6a15944f060df24468114157460e98a1b6b5e3dab85b8820a05b1 WHIRLPOOL 8dbca2912e71cd15e1a033df5cbeb572a6239e69d424cdc7532b9be94c2a39bd5635bbe7a1b618fa777b49d8dcc2d055e6c3e82bbdb993e1a0c354b7de9faf2a
 MISC metadata.xml 341 SHA256 48ace45f6804a885957c9724616e0bf1e19bbd3094656e1edc0aa33921c478dd SHA512 b0d48964fd96f2a74e96e79217de312cca838e8bacc1d562beaa30c97c87540c5fa0813a0380f2096cfae2fc100b9632ee9382af866b08215f9d2dc5ca9c8989 WHIRLPOOL fee19bb8ca9f34a1563e593f36d2c4b3316786a5e2c6ca4a0cecee522636cce9b80cf51533f03c54a989a04466b753637c958fc0b7b0bb84f1cb5fc24749a09f
