@@ -1,12 +1,14 @@
 [folders]
 movies_downloaded_dir = 
-movies_to_replace_dir = 
-watch_dir = 
-nzb_dir = 
-completed_dir = 
-metadata_dir = 
-cherrypylog_dir = /var/log/moviegrabber
-moviegrabberlog_dir = /var/log/moviegrabber
+movies_replace_dir = 
+usenet_watch_dir = 
+usenet_archive_dir = 
+usenet_completed_dir = 
+torrent_watch_dir = 
+torrent_archive_dir = 
+torrent_completed_dir = 
+logs_dir = /var/log/moviegrabber
+results_dir = /var/moviegrabber/db
 
 [switches]
 enable_downloaded = no
@@ -14,11 +16,12 @@ enable_replace = no
 enable_favorites = no
 enable_preferred = no
 enable_queuing = no
-enable_metadata = no
-enable_release_group = no
+enable_group_filter = no
 enable_email_notify = no
-enable_append_year = no
+enable_append_year = yes
 enable_posters = yes
+enable_post_processing = no
+enable_xbmc = no
 
 [imdb]
 good_genre = action,adventure,animation,biography,comedy,crime,documentary,drama,family,fantasy,film-Noir,game-show,history,horror,music,musical,mystery,news,reality-tv,romance,sci-fi,short,sport,talk-show,thriller,war,western
@@ -29,7 +32,6 @@ preferred_genre =
 preferred_rating = 0.0
 queue_genre = 
 queue_date = 1900
-bad_genre = 
 bad_title = 
 fav_dir = 
 fav_writer = 
@@ -46,49 +48,55 @@ email_password =
 email_from = 
 email_to = 
 
-[website_settings]
-index_site = nzbmatrix
-nzbmatrix_username = 
-nzbmatrix_key = 
-nzbmatrix_cat = 
-nzbmatrix_lang = 
-nzbmatrix_search = 
-nzbmatrix_minsize = 0
-nzbmatrix_maxsize = 0
-nzbmatrix_badreport = 
-nzbmatrix_release_group = 
-nzbs_id = 
-nzbs_hash = 
-nzbs_cat = 
-nzbs_search = 
-nzbs_minsize = 0
-nzbs_maxsize = 0
-nzbs_badreport = 
-nzbs_release_group = 
-newznab_hostname = 
-newznab_portnumber = 
-newznab_key = 
-newznab_cat = 
-newznab_search = 
-newznab_minsize = 0
-newznab_maxsize = 0
-newznab_badreport = 
-newznab_release_group = 
+[xbmc]
+xbmc_host = 
+xbmc_port = 80
+xbmc_username = xbmc
+xbmc_password = 
+xbmc_notification = no
+xbmc_library_update = no
 
-[misc]
+[usenet]
+index_site = 
+
+[torrent]
+index_site = 
+
+[post_processing]
+post_rule = 
+
+[webconfig]
+username = 
+password = 
+enable_ssl = no
+address = 0.0.0.0
+port = 9191
+
+[general]
+post_schedule_hour = 1
+post_schedule_minute = 0
+post_rename_files = no
+post_replace_existing = no
+post_cert_system = us
+index_preferred_group = 
+index_special_cut = 
+index_bad_group = 
+index_bad_report = 
+index_posts_to_process = 50
 color_scheme = darkblue
-schedule_hour = 1
-schedule_minute = 0
-max_items_shown = 100
-history_sort_order = post_date_desc
-queued_sort_order = post_date_desc
-movie_separator = <>
-moviegrabber_username = moviegrabber
-moviegrabber_password = secret
-moviegrabber_ssl = no
-launch_browser = no
-test_mode = no
+theme = classic
+index_schedule_hour = 1
+index_schedule_minute = 0
+max_items_shown = all
+history_sort_order = desc,postdatesort
+queued_sort_order = desc,postdatesort
+movie_title_separator = <>
+launch_browser = yes
 log_level = WARNING
 last_run = 
-version = 2.1.9
+check_version = daily
+last_version_check = 
+remote_version = 
+remote_download = 
+local_version = 2.2.1.0
 
