@@ -1,4 +1,4 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -6,6 +6,10 @@
 
 # Version of Python ("2.6", "2.7" or "2"; default should work for almost everyone)
 python_bin="python2"
+
+# Location of config files. # Make sure the user specified below can read and write to this file.
+# Only change this if you really know what you are doing!
+CONFIG_DIR="/var/moviegrabber/configs/"
 
 # Which port to run moviegrabber.
 # This has priority over the port configured in the webinterface.
