@@ -1,6 +1,16 @@
 # ChangeLog for net-nntp/moviegrabber
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*moviegrabber-9999 (02 Sep 2014)
+
+  02 Sep 2014; Daniel Rune Jensen (soehest) <drunejensen@gmail.com>
+  -moviegrabber-2.1.9.ebuild, +moviegrabber-9999.ebuild, files/config.ini,
+  files/moviegrabber.conf, files/moviegrabber.init:
+  Moviegrabber development moved to github. Ebuild changes to reflect
+  this. Also code matured a bit so changes to init.d script as well.
+  Note: I do no longer use ANY usenet indexers so i am unable to actually
+  test this. Please report back if this is working/not working.
 
 *moviegrabber-2.1.9 (27 Nov 2012)
 
